bfs: Handle type 'TIME' as int32 in queries.

* This fixes ticket #6734.